--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,20 @@
-postgres:
-  image: postgres:9.4.5
-  environment:
-    POSTGRES_USER: drkiq
-    POSTGRES_PASSWORD: yourpassword
-  ports:
-    - '5432:5432'
-  volumes:
-    - drkiq-postgres:/var/lib/postgresql/data
+version: "3.7"
 
-redis:
-  image: redis:3.0.5
-  ports:
-    - '6379:6379'
-  volumes:
-    - drkiq-redis:/var/lib/redis/data
-
-drkiq:
-  build: .
-  links:
-    - postgres
-    - redis
-  volumes:
-    - .:/drkiq
-  ports:
-    - '8000:8000'
-  env_file:
-    - .drkiq.env
-
-sidekiq:
-  build: .
-  command: bundle exec sidekiq -C config/sidekiq.yml
-  links:
-    - postgres
-    - redis
-  volumes:
-    - .:/drkiq
-  env_file:
-    - .drkiq.env
+services:
+  db:
+    image: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./tmp/db:/var/lib/postgresql/data
+  library:
+    build: .
+    container_name: library_container
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./:/home/app
+    environment:
+      DATABASE_URL: postgres://postgres@db
+    depends_on:
+      - db
